# Halcon_TcpWSL

./: .gitignore  CMakeLists.txt  README.md  项目说明.md
.claude/: settings.json
3rd/DjiH264Encoder/include/: dji_encoder.h
3rd/DjiH264Encoder/lib/: DjiH264Encoder.lib  vpl.lib  yuv.lib
3rd/DjiH264Encoder/lib/x64-linux/: libvpl.so.2
def/: Halcon_TcpWSL.def
doc/: Linux构建说明.md
doc/html/reference/: DCreateConnection.html  DRecvData.html  DSendData.html  HHalconTcpWSL.html  WCloseConnection.html  WCreateConnection.html  WRecvData.html  WSendData.html  index_by_name.html  index_classes.html  toc_userextensions.html
examples/: h264_receiver.hdev  h264_sender.hdev
help/: operators_en_US.idx  operators_en_US.key  operators_en_US.num  operators_en_US.ref  operators_en_US.sta
include/: Halcon_TcpWSL.h  decoder_impl.h  encoder_impl.h  network.h  network_config.h  queue.h
lib/x64-linux/: libyuv.so.0.0.1883
scripts/: install_linux.sh  test_h264_init.cpp
source/: Halcon_TcpWSL.c  Halcon_TcpWSL.cpp  decoder_api.cpp  decoder_impl.cpp  encoder_api.cpp  encoder_impl.cpp  network.cpp
